[gd_scene load_steps=9 format=3 uid="uid://cte80ldpkid66"]

[ext_resource type="Script" uid="uid://6gxqm04ujth4" path="res://Scripts/seletor_fases.gd" id="1_w4kf5"]
[ext_resource type="Texture2D" uid="uid://ba40qwobjtnst" path="res://Sprites/Placeholders/medalha0.png" id="2_yvhwx"]
[ext_resource type="Texture2D" uid="uid://d34fhldelagp7" path="res://Sprites/Placeholders/medalha1.png" id="3_f5mdk"]
[ext_resource type="Texture2D" uid="uid://dulxd7qg6drmf" path="res://Sprites/Placeholders/medalha2.png" id="4_6o0jw"]
[ext_resource type="Texture2D" uid="uid://dp1jtsyoqujtg" path="res://Sprites/Placeholders/medalha3.png" id="5_bxjtx"]
[ext_resource type="PackedScene" uid="uid://cn0yfmj4x3uel" path="res://experimentos/painel_fundo.tscn" id="6_bxjtx"]
[ext_resource type="Theme" uid="uid://bq6xwlkcamw5v" path="res://Fontes/saveBotao.tres" id="6_f5mdk"]
[ext_resource type="Script" uid="uid://bjb4beg5ct1nm" path="res://experimentos/teste_botao.gd" id="7_6o0jw"]

[node name="Seletor_Fases" type="Control" node_paths=PackedStringArray("numeroFaseLabel", "botaoPlay", "labelFDS", "gridContainerBotoesLvl", "medalhaIcone", "todosBotoes")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4kf5")
numeroFaseLabel = NodePath("ColorRect/numeroFase")
botaoPlay = NodePath("ColorRect/botaoStart")
labelFDS = NodePath("ColorRect/GridContainer/textFds")
gridContainerBotoesLvl = NodePath("GridContainer2/GridContainer")
medalhaIcone = NodePath("ColorRect/GridContainer/medalhas")
medalhasSprites = Array[Texture2D]([ExtResource("2_yvhwx"), ExtResource("3_f5mdk"), ExtResource("4_6o0jw"), ExtResource("5_bxjtx")])
todosBotoes = [NodePath("GridContainer2/fase0"), NodePath("GridContainer2/GridContainer/fase1"), NodePath("GridContainer2/GridContainer/fase2"), NodePath("GridContainer2/GridContainer/fase3"), NodePath("GridContainer2/GridContainer/fase4"), NodePath("GridContainer2/GridContainer/fase5")]

[node name="painelFundo" parent="." instance=ExtResource("6_bxjtx")]
layout_mode = 1

[node name="GridContainer2" type="GridContainer" parent="."]
layout_mode = 1
offset_left = 23.0
offset_top = 99.0
offset_right = 458.0
offset_bottom = 165.0
theme_override_constants/v_separation = 30

[node name="fase0" type="Button" parent="GridContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6_f5mdk")
toggle_mode = true
text = "tutorial"
script = ExtResource("7_6o0jw")

[node name="GridContainer" type="GridContainer" parent="GridContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 30
columns = 10

[node name="fase1" type="Button" parent="GridContainer2/GridContainer"]
layout_mode = 2
theme = ExtResource("6_f5mdk")
toggle_mode = true
text = "Fase 1"
script = ExtResource("7_6o0jw")

[node name="fase2" type="Button" parent="GridContainer2/GridContainer"]
layout_mode = 2
theme = ExtResource("6_f5mdk")
toggle_mode = true
text = "Fase 2"
script = ExtResource("7_6o0jw")

[node name="fase3" type="Button" parent="GridContainer2/GridContainer"]
layout_mode = 2
theme = ExtResource("6_f5mdk")
toggle_mode = true
text = "Fase 3"
script = ExtResource("7_6o0jw")

[node name="fase4" type="Button" parent="GridContainer2/GridContainer"]
layout_mode = 2
theme = ExtResource("6_f5mdk")
toggle_mode = true
text = "Fase 4
"
script = ExtResource("7_6o0jw")

[node name="fase5" type="Button" parent="GridContainer2/GridContainer"]
layout_mode = 2
theme = ExtResource("6_f5mdk")
toggle_mode = true
text = "Fase 5"
script = ExtResource("7_6o0jw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 59.0
offset_right = 629.0
offset_bottom = 277.0
color = Color(0, 0, 0, 0.5411765)

[node name="numeroFase" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 14.0
offset_top = 15.0
offset_right = 137.0
offset_bottom = 38.0
text = "Selecione a fase"
horizontal_alignment = 1

[node name="botaoStart" type="Button" parent="ColorRect"]
visible = false
layout_mode = 0
offset_left = 51.0
offset_top = 180.0
offset_right = 99.0
offset_bottom = 211.0
text = "Jogar"

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 29.0
offset_top = 62.0
offset_right = 121.0
offset_bottom = 102.0

[node name="textFds" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "melhor pontuação:"

[node name="medalhas" type="TextureRect" parent="ColorRect/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 327.0
offset_right = 56.0
offset_bottom = 358.0
text = "voltar
"

[connection signal="pressed" from="GridContainer2/fase0" to="." method="_on_fase_0_pressed"]
[connection signal="pressed" from="GridContainer2/GridContainer/fase1" to="." method="_on_fase_1_pressed"]
[connection signal="pressed" from="GridContainer2/GridContainer/fase2" to="." method="_on_fase_2_pressed"]
[connection signal="pressed" from="GridContainer2/GridContainer/fase3" to="." method="_on_fase_3_pressed"]
[connection signal="pressed" from="GridContainer2/GridContainer/fase4" to="." method="_on_fase_4_pressed"]
[connection signal="pressed" from="GridContainer2/GridContainer/fase5" to="." method="_on_fase_5_pressed"]
[connection signal="pressed" from="ColorRect/botaoStart" to="." method="_on_botao_start_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
